JBM-492 does not support in Java 8